--- a/gb/23/2/8/n13925150.md
+++ b/gb/23/2/8/n13925150.md
@@ -26,31 +26,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/29/n11009341.md#1" target="_blank">阎长贵：陶铸是被谁打倒的？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/26/n10875809.md#1" target="_blank">曝光610文件 宗教权威人谴中共打压法轮功</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/6/n11093693.md#1" target="_blank">林辉：“口吞红太阳”与“领袖最脏”罪</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/10/n11248618.md#1" target="_blank">救母何惧强暴 正义存于人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/2/n13920654.md#1">音乐才子曾患白肺命危 默念九个字起死回生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917512.md#1">生命元神不灭 勿生生沉沦苦海里</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/29/n13917669.md#1">正月冬雷异象 多方示警亡政之兆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924672.md#1">【十字路口】间谍气球让习近平陷困局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924560.md#1">【马克时空】美军F-22击落间谍气球 中共扬言报复</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/7/n13924748.md#1">【军事热点】间谍气球余波未平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923437.md#1">中共为间谍气球狡辩 余茂春：谎话无法圆</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923557.md#1">沈舟：F-22击落中共气球 凸显中美军力差距</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923831.md#1">社区食堂也要烂尾？中共官媒称运营有困扰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924175.md#1">惊传与杨颖复合 黄晓明过年无名指戴钻戒引关注</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922703.md#1">胡歌宣布当爸后首现身 被翻曾预告过年送惊喜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922969.md#1">李安不以高帧率拍《李小龙》首认新片用不到</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922614.md#1">《毒舌大状》影评：天有眼 公道自在人心</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924145.md#1">家乡土耳其发生强震 吴凤贴影片惊呼世界末日</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922993.md#1">英男用这招订航班商务舱机位 比经济舱便宜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/31/n13919486.md#1">炎症生百病 5种天然消炎药帮你抗炎</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922810.md#1">持续慢性胸痛？根源可能不是因为心脏问题</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/3/n13898617.md#1">被称为“大药箱” 这一植物抗流感功效强大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922858.md#1">为什么不能仅靠吃蔬菜水果抗癌？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964333.md#1">【中国禁闻】中国地方银行现危机 多行拒赎二级债</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13962933.md#1">分析：养儿防老被中共破坏 老人何去何从</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962417.md#1">血糖失控会掉发 2方法有助逆转秃头</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962594.md#1">这几种食物加辣酱 味道超乎想像</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/2/8/n13925150.htm">《Family》主演张赫、张娜拉 睽违九年四度合作</a></p><hr>
