--- a/gb/23/1/11/n13904266.md
+++ b/gb/23/1/11/n13904266.md
@@ -46,31 +46,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/21/1/23/n12706455.md#1" target="_blank">“天安门自焚”伪案八大悬疑人物</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/2/n10185855.md#1" target="_blank">“石油之父”惨遭灭门（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/24/n8031801.md#1" target="_blank">五年偏瘫一念即愈</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/4/n11566782.md#1" target="_blank">凌晓辉：当代人类的天书（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/30/n11355603.md#1" target="_blank">法轮功阿根廷洪传19年 法官曾要抓江罗</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13896885.md#1">《推背图》第五十六象奥义对应当今大疫幻变</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13899460.md#1">【未解之谜】预言家珍妮之二 最意外的总统选举</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/1/n13897321.md#1">【百年真相】“子承父业” 汉奸江泽民卖国实录</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/12/21/n13889120.md#1">【爱丽话五千】古人白头偕老到底有什么秘诀？如何保持婚姻长久</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903898.md#1">【十字路口】战狼为何流放？北京三维稳迷魂箭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/10/n13903430.md#1">【热点互动】疫情“东升西降”抗共“东西同亮”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901678.md#1">【十字路口】赵立坚去哪乐？人矿觉醒 中共心惊</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13901880.md#1">江西货车突然冲进出殡队伍 造成重大伤亡</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902471.md#1">中共“左棍”司马南染疫 自称被人暴打引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902526.md#1">王祖贤息影19年没工作 曾坦言钱一辈子花不完</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902543.md#1">大陆女星沈月自曝：入行首部戏的片酬被偷</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903390.md#1">与林宥嘉结婚6周年 丁文琪铁婚纪念文引热议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902301.md#1">《阿凡达：水之道》成为史上票房第7大电影</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902573.md#1">与梁咏琪饰弃女父母 郭富城：角色与我反差大</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902197.md#1">世界最快乐国家的心理学家：我们不做3件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901565.md#1">断食可抗癌？三期结肠癌四个月竟痊愈</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902782.md#1">美国房价到底将下跌多少？一众专家这样说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901653.md#1">肠道菌相影响大肠癌 3招养好菌</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/8/n13902435.md#1">腰背痛怎么办？症状、原因、治疗一次看懂</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963169.md#1">家人清理已故老人房产 意外发现大批昂贵珠宝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956821.md#1">研究：睡前避免电子设备可降低妊娠糖尿病风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963736.md#1">猛眨眼睛是说谎的迹象吗？ 专家这么说</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/11/n13904266.htm">理悟：苦难年关</a></p><hr>
