--- a/gb/23/1/14/n13906801.md
+++ b/gb/23/1/14/n13906801.md
@@ -27,31 +27,31 @@
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/8/n11170944.md#1" target="_blank">观雨堂主：周作人的悲剧抉择</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/4/15/n4132079.md#1" target="_blank">从唐山义女“探父蒙难”看古今对比</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/20/n10576459.md#1" target="_blank">晓明：桂林“文革”运动的回忆与思考</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/5/n11501516.md#1" target="_blank">欧洲千人法会 西方法轮功学员谈修炼感悟</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13902596.md#1">【未解之谜】珍妮预言之三 2037年进入新纪元？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13901111.md#1">【百年真相】以“亿元”计 中共十大贪官排行榜</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/2/n13897476.md#1">一代娥眉惹风流 薛涛枇杷门巷后的人生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/4/n13898887.md#1">乱世一书生 怎能拥有安定一城的能量？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904409.md#1">郑愚山：供销社的“大爷”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906114.md#1">【全球新闻】政令不通威信颠覆？ 习近平放狠话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906520.md#1">【菁英论坛】白肺疑凶：灭活疫苗隐藏武汉毒株</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906115.md#1">【晚间新闻】卫星图像揭中南海秘密 每天两万人去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905674.md#1">安徽女副省长升迁火箭速度 令网民惊异</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905045.md#1">赵立坚被调职后 其妻发微博疑鸣不平</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905497.md#1">专家：政令不通 习面临信任危机放狠话</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905708.md#1">称马国影星杨紫琼为香港演员 港共官员遭炮轰</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/13/n13906157.md#1">蓝心湄录除夕节目 与陈美凤唱跳秀少女穿搭</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904608.md#1">秀场歌王歌后开唱 陈美凤洪荣宏分享过往趣事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/11/n13904822.md#1">徐娇确诊后康复 准备返回美国升学</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13905743.md#1">曾与金城武演父子 港星陈万雷在大陆染疫去世</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/7/n13901669.md#1">不起眼的青柠有6大功效 甚至能救人一命</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903175.md#1">不止消炎助消化 每天喝芦荟汁的9个理由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900876.md#1">战胜感冒的5个最佳方法</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/12/n13904991.md#1">【健康1+1】头发为何转白？ 三招让你变黑发</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/6/n13900963.md#1">千万别刚起床就喝咖啡！这时间点喝最好</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/27/n13939508.md#1">一代圣主康熙的教子“心法”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/28/n13960551.md#1">【未解之谜】海奥华预言（1）外星人眼中的创世</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963438.md#1">【时事人物】从任性少年到ChatGPT新乌托邦教主</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/24/n13957760.md#1">【古道人生】灾荒中新婚妻子卖身救夫最终得团圆</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/16/n13951411.md#1">明朝两则轮回转生的故事</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/3/n13964335.md#1">【全球新闻】马英九称两岸都是中华民国 遭中共封杀</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963293.md#1">【拍案惊奇】蔡奇要官员向习公布财产防外逃？</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963507.md#1">【舞蹈三剑客】神韵舞蹈演员分享他们的12个旅行必备小物！</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963229.md#1">大陆直播主街头采访“你会上前线吗”舆论翻车</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962292.md#1">海南变香港？专家：党比法大 难造自由港</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963169.md#1">家人清理已故老人房产 意外发现大批昂贵珠宝</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962773.md#1">分享冻龄秘笈遭酸民攻击 伊能静高EQ回应</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962807.md#1">张国立现身大学开讲 自称是院长 网络炸锅</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962841.md#1">淡出歌坛四年 60岁王杰近况曝光</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/1/n13963429.md#1">9岁时曾遭绑架 张艾嘉儿子首次吐露心声</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962676.md#1">《镜之孤城》影评：奇幻经历 成走出霸凌阴霾契机</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962591.md#1">常服安眠药痴呆风险增8成  专家荐“神奇助眠剂”</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962544.md#1">研究：每天锻炼20分钟有效降低住院风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/31/n13962445.md#1">研究：具侵略性的恶犬比较可能有坏主人</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/3/23/n13956821.md#1">研究：睡前避免电子设备可降低妊娠糖尿病风险</a></li>
+<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/2/n13963736.md#1">猛眨眼睛是说谎的迹象吗？ 专家这么说</a></li>
 <hr>
 
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/1/14/n13906801.htm">理悟：当务之急</a></p><hr>
